Add maven surefire plugin to user and utils components